--- a/app/views/interested-party/v1/comment-upload.html
+++ b/app/views/interested-party/v1/comment-upload.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
 
+{% set pageref = "###" %}
+{% extends "layout.html" %}
+
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "Upload your comments"  %}
+{% set title = "Upload your comment"  %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -29,8 +32,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <!-- <form action="comment-upload-list" method="post"> -->
-      <form action="comment-upload-check" method="post" novalidate>
+      <form action="check-answers" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
         <h1 class="govuk-heading-l">
@@ -38,11 +40,19 @@
         </h1>
 
         <div class="govuk-form-group">
-          <label class="govuk-label" for="upload-multiple">
-            Drag and drop or choose files
+          <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-appealstatement">
+            {% if data["appealsub-"+version+"-appealdocuments-appealstatement"] and data["appealsub-"+version+"-appealdocuments-appealstatement"] != "" %}
+              Replace the file
+            {% else %}
+              Drag and drop or choose a file
+            {% endif %}
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="comments-file" name="comments-file" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload" id="appealsub-{{version}}-appealdocuments-appealstatement" name="appealsub-{{version}}-appealdocuments-appealstatement" type="file">
         </div>
+
+        {{ govukInsetText({
+          text: "File size should be no more than 15MB"
+        }) }}
 
         {{ govukDetails({
           summaryText: "Files you can upload",
@@ -51,24 +61,37 @@
               You can upload the following types of file:
             </p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>RTF</li>
-              <li>TXT</li>
-              <li>DOC</li>
-              <li>DOCX</li>
-              <li>PDF</li>
-              <li>DOC or DOCX</li>
+              <li>rtf</li>
+              <li>txt</li>
+              <li>doc</li>
+              <li>docx</li>
+              <li>pdf</li>
+
+              <!-- <li>DOC or DOCX</li>
               <li>JPG or JPEG</li>
               <li>PDF</li>
               <li>PNG</li>
-              <li>TIF or TIFF</li>
+              <li>TIF or TIFF</li> -->
             </ul>
-
-            <p>
-              Your file must be smaller than 15MB.
-            </p>
 
           '
         }) }}
+
+        <!-- {{ govukDetails({
+          summaryText: "Help with file formats",
+          html: '
+            <p class="govuk-body">
+              You must upload comments in one of these file formats
+            <p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>rtf</li>
+              <li>txt</li>
+              <li>doc</li>
+              <li>docx</li>
+              <li>pdf</li>
+            </ul>
+          '
+        }) }} -->
 
         {{ govukButton({
           text: "Continue"
