--- a/app/views/interested-party/v1/guidance.html
+++ b/app/views/interested-party/v1/guidance.html
@@ -4,7 +4,7 @@
 {% set serviceName = "Appeal a planning decision" %}
 {% set subServiceName = "Comment on an appeal" %}
 
-{% set title = "Guidance for submitting comments" %}
+{% set title = "Comment on a planning appeal" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -29,7 +29,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-l">{{ subServiceName }}</span>
+      <!-- <span class="govuk-caption-l">{{ subServiceName }}</span> -->
       <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
@@ -39,20 +39,23 @@
       </p>
 
       <h2 class="govuk-heading-m">
-        Your comments
+        Before you start
       </h2>
 
       <p class="govuk-body">
-        Any previous comments that you submitted as part of an application will be considered by the Inspector. The local planning department shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
+        You will need:
       </p>
 
-      <p class="govuk-body">
-        We will share any comments you submit with the applicant and the local planning department.
-      </p>
+      <ul class="govuk-list govuk-list--bullet">
+        <!-- <li>the appeal reference number</li> -->
+        <li>the 7 digit appeal reference number </li>
+        <li>an email address so we can update you about the appeal</li>
+        <li>your comments saved in a document</li>
+      </ul>
 
-      <p class="govuk-body">
+      <h2 class="govuk-heading-m">
         Your comments must not include:
-      </p>
+      </h2>
 
       <ul class="govuk-list govuk-list--bullet">
         <!-- <li>the appeal reference number</li> -->
@@ -60,20 +63,16 @@
         <li>sensitive information</li>
       </ul>
 
-      <p class="govuk-body">
-        If you include anything you should not, we may ask you to resubmit your comments. This would delay the appeal.
-      </p>
-
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            See a full list of what you should not include
+            Check what sensitive information includes
           </span>
         </summary>
         <div class="govuk-details__text">
 
           <p class="govuk-body">
-            You should not include:
+            Sensitive information refers to:
           </p>
 
           <ul class="govuk-list govuk-list--bullet">
@@ -132,31 +131,10 @@
         </div>
       </details>
 
-      <h2 class="govuk-heading-m">
-        Before you start
-      </h2>
-
-      <p class="govuk-body">
-        You will need:
-      </p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <!-- <li>the appeal reference number</li> -->
-        <!-- <li>the 7 digit appeal reference number</li> -->
-        <li>
-          the 7-digit appeal reference that can be found on your letter from the local planning department.
-        </li>
-        <li>
-          an email address so we can contact you if we have any questions
-        </li>
-        <li>
-          your comments saved in a document
-        </li>
-      </ul>
 
       {{ govukButton({
         classes: "govuk-!-margin-top-5",
-        href: "appeal-search-reference",
+        href: "appeal-search",
         text: "Continue"
       }) }}
 
