Addition of CSS to pattern

--- a/app/views/design-system/components/file-upload-single.html
+++ b/app/views/design-system/components/file-upload-single.html
@@ -58,12 +58,24 @@
 
           </div>
           <div class="ds-example__html">
+            <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
+              HTML
+            </h4>
             <pre><code class="hljs">&lt;div class="govuk-form-group"&gt;
   &lt;label class="govuk-label govuk-label--m" for="file-upload-single"&gt;
     Drag and drop or choose a file
   &lt;/label&gt;
   &lt;input class="govuk-file-upload pins-file-upload" id="file-upload-single" name="file-upload-single" type="file"&gt;
 &lt;/div&gt;</code></pre>
+            <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
+              CSS
+            </h4>
+            <pre><code class="hljs">.pins-file-upload {
+  border: $govuk-border-colour 2px dashed;
+  margin-left: 3px;
+  padding: 50px 30px;
+  width: calc(90% - 60px);
+}</code></pre>
           </div>
         </div>
 
@@ -79,7 +91,7 @@
           </div>
           <div class="ds-example__rendered">
             
-            <h3 class="govuk-heading-m govuk-!-margin-top-6">
+            <h3 class="govuk-heading-m">
               Uploaded file
             </h3>
             <p class="govuk-body govuk-!-margin-bottom-8">
@@ -94,7 +106,11 @@
 
           </div>
           <div class="ds-example__html">
-            <pre><code class="hljs">&lt;h3 class="govuk-heading-m govuk-!-margin-top-6"&gt;
+            
+            <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
+              HTML
+            </h4>
+            <pre><code class="hljs">&lt;h3 class="govuk-heading-m"&gt;
   Uploaded file
 &lt;/h3&gt;
 &lt;p class="govuk-body govuk-!-margin-bottom-8"&gt;
@@ -166,6 +182,9 @@
 
           </div>
           <div class="ds-example__html">
+            <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
+              HTML
+            </h4>
             <pre><code class="hljs">
 &lt;div class="govuk-form-group govuk-form-group--error"&gt;
   &lt;label class="govuk-label govuk-label--m" for="file-upload-single"&gt;
