AS-4534 positive before you start journey

--- a/app/views/before-you-start/v10/index.html
+++ b/app/views/before-you-start/v10/index.html
@@ -1,3 +1,4 @@
+{% set pageref = "BYS-INTRO" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
@@ -22,10 +23,17 @@
         Before you start
       </h1>
       <p class="govuk-body">
-        We need to ask you some questions about your appeal, to check you can use this service.
+        This is a new service. It's only for appeals about certain local planning departments and planning application types.
+      </p>
+
+      <h2 class="govuk-heading-m">
+        Check if you can use this service
+      </h2>
+      <p class="govuk-body">
+        Before you start, we'll check if you can use this service by asking some questions about your appeal.
       </p>
       <p class="govuk-body">
-        If you're eligible to use this service, you'll be able to continue and submit your appeal.
+        If you cannot use this service, you can still appeal using the existing service.
       </p>
 
       {{ govukButton({
