--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,17 +42,17 @@
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                      text: "WIP"
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       Version 10 - Before you start
                     </h3>
                     <h4 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      Additional questions for prior approval and removal or change of conditions to go down expedited written representations route
+                      Additional questions for 'prior approval' and 'removal or change of conditions' to go down expedited written representations route.
                     </h4>
                     <p class="govuk-body">
-                      Splitting out the "Before you start" journey from the "Appellant submission" journey so we can more easily manage changes across the various possible journeys therough the appeal service.
+                      Splitting out the "Before you start" journey from the "Appellant submission" journey so we can more easily manage changes across the various possible journeys throughout the Appeal a planning decision service.
                     </p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
@@ -74,12 +74,13 @@
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (1)
+                          Jira Tickets (2)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4484" target="_blank">AS-4484 Amendment 'Before you start' journey for Prior Approval and vary/remove a condition</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4534" target="_blank">AS-4534 How can we make the before you start journey positive for anyone who can appeal?</a></li>
                         </ul>
                       </div>
                     </details>
