--- a/app/views/layouts/before-you-start/v10.html
+++ b/app/views/layouts/before-you-start/v10.html
@@ -67,7 +67,6 @@
             <h2 class="govuk-visually-hidden">Support links</h2>
             
             <ul class="govuk-footer__inline-list">
-
               {% if pageref %}
                 <li class="govuk-footer__inline-list-item">
                   {{ govukTag({
@@ -76,6 +75,9 @@
                   }) }}
                 </li>
               {% endif %}
+            </ul>
+            
+            <ul class="govuk-footer__inline-list">
               
               <li class="govuk-footer__inline-list-item">
                 <a class="govuk-footer__link" href="https://govuk-prototype-kit.herokuapp.com/">
