--- a/app/views/before-you-start/v10/shutter/lpa-ineligible.html
+++ b/app/views/before-you-start/v10/shutter/lpa-ineligible.html
@@ -1,8 +1,10 @@
+{% set pageref = "BYS-ACP-1" %}
+{% set lpaname = "Your local planning department" %}
 {% extends "layouts/before-you-start/v10.html" %}
 
 
 {% block pageTitle %}
-  You need to use a different service - {{serviceName}} - GOV.UK
+  You need to use the existing service - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -11,23 +13,29 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You need to use a different service.
+        You need to use the existing service
       </h1>
-
       <p class="govuk-body">
-        This is a new service. It is currently only available for appeals about certain local planning departments.
-      <p>
+        {% for lpa in data['lpas'] %}
+          {% if lpa.key == data["bys-"+version+"-planningdepartment"] %}
+            {% set lpaname = lpa['official-name'] %}
+          {% endif %}
+        {% endfor %}
+        {{ lpaname }} is not using this new service yet.
+      </p>
       <p class="govuk-body">
-        Your local planning department is not using the service yet.
-      <p>
+        You need to submit your appeal using the existing service, the Appeals Casework Portal.
+      </p>
 
       <h2 class="govuk-heading-m">
-        How to appeal
+        How to begin your appeal
       </h2>
-
       <p class="govuk-body">
-        You can <a href="javascript:preventDefault();" class="govuk-link">appeal using our appeals casework portal</a>.
-      <p>
+        To begin your appeal, log in or register on the Appeals Casework Portal.
+      </p>
+      {{ govukButton({
+        text: "Continue to the Appeals Casework Portal"
+      }) }}
 
     </div>
   </div>
