Content fix to CYS on BYS

--- a/app/views/before-you-start/v10/check-answers.html
+++ b/app/views/before-you-start/v10/check-answers.html
@@ -1,7 +1,7 @@
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
-  You're eligible to appeal using this service - Before you start - {{serviceName}} - GOV.UK
+  You can appeal using this service - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -25,11 +25,11 @@
       <form action="" method="post">
       
         <h1 class="govuk-heading-l">
-          You're eligible to appeal using this service
+          You can appeal using this service
         </h1>
 
         <p class="govuk-body">
-          Based on your answers, you're eligible to appeal using this service.
+          Based on your answers, You can appeal using this service.
         </p>
         <p class="govuk-body">
           Your deadline to appeal is 11.59pm on Monday {{ data["bys-"+version+"-deadline-day"] }} {{ data["bys-"+version+"-deadline-month"] | formatMonth }} {{ data["bys-"+version+"-deadline-year"] }}.
