--- a/app/views/before-you-start/v10/check-answers.html
+++ b/app/views/before-you-start/v10/check-answers.html
@@ -29,7 +29,7 @@
         </h1>
 
         <p class="govuk-body">
-          Based on your answers, You can appeal using this service.
+          Based on your answers, you can appeal using this service.
         </p>
         <p class="govuk-body">
           Your deadline to appeal is 11.59pm on Monday {{ data["bys-"+version+"-deadline-day"] }} {{ data["bys-"+version+"-deadline-month"] | formatMonth }} {{ data["bys-"+version+"-deadline-year"] }}.
