--- a/app/views/interested-party/v4/appeal-search-no-results.html
+++ b/app/views/interested-party/v4/appeal-search-no-results.html
@@ -1,8 +1,7 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Appeal a planning decision" %}
-{% set subServiceName = "Comment on an appeal" %}
+{% set serviceName = "Find out about planning appeals" %}
 
 {% set title = "No matching appeals" %}
 
@@ -29,7 +28,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-l">{{ subServiceName }}</span>
     <h1 class="govuk-heading-l">
       {{ title }}
     </h1>
