--- a/app/views/interested-party/v4/comment-delete.html
+++ b/app/views/interested-party/v4/comment-delete.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Appeal a planning decision" %}
-{% set subServiceName = "Comment on an appeal" %}
+{% set serviceName = "Find out about planning appeals" %}
 
 {% set title = "Delete a comment" %}
 
@@ -27,12 +26,11 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds"> 
+    <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-l">{{ subServiceName }}</span>
       <h1 class="govuk-heading-l">
         {{ title }}
-      </h1>    
+      </h1>
 
       <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -51,7 +49,7 @@
           </tr>
         </tbody>
       </table>
-      
+
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -87,9 +85,9 @@
         }) }}
 
       </form>
-        
+
     </div>
-    
+
   </div>
 
   <!-- End of content -->
