--- a/app/views/interested-party/v4/comment-received.html
+++ b/app/views/interested-party/v4/comment-received.html
@@ -3,8 +3,7 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Appeal a planning decision" %}
-{% set subServiceName = "Comment on an appeal" %}
+{% set serviceName = "Find out about planning appeals" %}
 
 {% set title = "Comment received" %}
 
