--- a/app/views/interested-party/v4/comment-upload.html
+++ b/app/views/interested-party/v4/comment-upload.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Appeal a planning decision" %}
-{% set subServiceName = "Comment on an appeal" %}
+{% set serviceName = "Find out about planning appeals" %}
 
 {% set title = "Upload your comments"  %}
 
@@ -32,7 +31,6 @@
       <!-- <form action="comment-upload-list" method="post"> -->
       <form action="comment-upload-check" method="post" novalidate>
 
-        <span class="govuk-caption-l">{{ subServiceName }}</span>
         <h1 class="govuk-heading-l">
           {{ title }}
         </h1>
