--- a/app/views/interested-party/v4/closed-appeals.html
+++ b/app/views/interested-party/v4/closed-appeals.html
@@ -27,7 +27,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    
+
     <h1 class="govuk-heading-l">
       {{ title }}
     </h1>
@@ -60,7 +60,7 @@
         classes: 'govuk-!-width-one-quarter'
       },
       {
-        text: "Appeal reference",
+        text: "Appeal number",
         classes: 'govuk-!-width-one-quarter'
       },
       {
@@ -77,7 +77,7 @@
           text: "Mel Pickins"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166002&site-address=102%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins">APP/Q999/D/20/0166002</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166002&site-address=102%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins">0166002</a>'
         },
         {
           text: "21 January 2022"
@@ -91,7 +91,7 @@
           text: "Nic Soonez"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0141289&site-address=77%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Nic%20Soonez">APP/Q999/D/20/0141289</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0141289&site-address=77%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Nic%20Soonez">0141289</a>'
         },
         {
           text: "21 January 2022"
@@ -105,7 +105,7 @@
           text: "Talisan Creedance"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">APP/Q999/D/20/0165971</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">0165971</a>'
         },
         {
           text: "12 January 2022"
@@ -119,7 +119,7 @@
           text: "J. M. Wigstone"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">APP/Q999/D/21/0165791</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">0165791</a>'
         },
         {
           text: "20 December 2021"
@@ -134,7 +134,7 @@
           text: "Jan Fish"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">APP/Q999/D/21/0166241</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">0166241</a>'
         },
         {
           text: "11 July 2021"
@@ -148,7 +148,7 @@
           text: "P. J. Thames"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">APP/Q999/D/21/0166111</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">0166111</a>'
         },
         {
           text: "13 June 2021"
@@ -162,7 +162,7 @@
           text: "Danny Fiakkas"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">APP/Q999/D/21/0166102</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">0166102</a>'
         },
         {
           text: "13 April 2021"
@@ -176,7 +176,7 @@
           text: "Pavarthi Sagar"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">APP/Q999/D/21/0165854</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">0165854</a>'
         },
         {
           text: "13 April 2021"
@@ -190,7 +190,7 @@
           text: "Ash Davenant"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">APP/Q999/D/21/0165921</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">0165921</a>'
         },
         {
           text: "8 March 2021"
@@ -204,7 +204,7 @@
           text: "Charlie Agadosi"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">APP/Q999/D/21/0166013</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">0166013</a>'
         },
         {
           text: "18 February 2021"
