--- a/app/views/interested-party/v4/guidance.html
+++ b/app/views/interested-party/v4/guidance.html
@@ -52,6 +52,10 @@
         You should only include personal information if it's relevant to the appeal.
       </p>
 
+      <p>
+        Personal information includes health, race and gender.
+      </p>
+
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
@@ -60,9 +64,13 @@
         </summary>
         <div class="govuk-details__text">
 
-          <p class="govuk-body">
+          <!-- <p class="govuk-body">
             Other examples of personal information
-          </p>
+          </p> -->
+
+          <h3 class="govuk-heading-s">
+            Other examples of personal information
+          </h3>
 
           <ul class="govuk-list govuk-list--bullet">
 
