--- a/app/views/interested-party/v4/open-appeals.html
+++ b/app/views/interested-party/v4/open-appeals.html
@@ -68,7 +68,7 @@
           classes: 'govuk-!-width-one-third'
         },
         {
-          text: "Appeal reference",
+          text: "Appeal number",
           classes: 'govuk-!-width-one-third'
         }
       ],
@@ -81,7 +81,7 @@
             text: "J. M. Wigstone"
           },
           {
-            html: '<a class="govuk-link" href="appeal-details?status=open&appealCode=0166327&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone&appealReference=APP%2F2021%2F56789%2F0166327">APP/Q999/D/21/0166327</a>'
+            html: '<a class="govuk-link" href="appeal-details?status=open&appealCode=0166321&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone&appealReference=0166321">0166321</a>'
           }
         ]
       ]
@@ -119,7 +119,7 @@
           classes: 'govuk-!-width-one-third'
         },
         {
-          text: "Appeal reference",
+          text: "Appeal number",
           classes: 'govuk-!-width-one-third'
         }
       ],
@@ -132,7 +132,7 @@
             text: "Mel Pickins"
           },
           {
-            html: '<a class="govuk-link" href="appeal-details?status=open&appealCode=0166327&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone&appealReference=APP%2F2021%2F56789%2F0166327">APP/Q999/D/21/0166327</a>'
+            html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166327&site-address=103%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins&appealReference=0166327">0166327</a>'
           }
         ],
         [
@@ -143,7 +143,7 @@
             text: "Mel Pickins"
           },
           {
-            html: '<a class="govuk-link" href="appeal-details?status=open&appealCode=0166327&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone&appealReference=APP%2F2021%2F56789%2F0166328">APP/Q999/D/21/0166328</a>'
+            html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166328&site-address=103%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins&appealReference=0166328">0166328</a>'
           }
         ]
       ]
