--- a/app/views/appellant-submission/v13/full/appeal-site/agricultural-holdings-tell-tenants.html
+++ b/app/views/appellant-submission/v13/full/appeal-site/agricultural-holdings-tell-tenants.html
@@ -28,7 +28,7 @@
           Tell us about the appeal site
         </span>
 
-        {% if data["appealsub-"+version+"-appealsite-agriculturalholdings-othertenants"] == "Yes" %}
+        {% if data["appealsub-"+version+"-appealsite-agriculturalholdings-tenant"] == "Yes" and data["appealsub-"+version+"-appealsite-agriculturalholdings-othertenants"] == "Yes" %}
 
           <h1 class="govuk-heading-l">Telling the other tenants</h1>
           <p class="govuk-body">You must have told all the other tenants about your appeal.</p>
