--- a/app/views/appellant-submission/v13/full/appeal-site/knows-none/identifying-landowners.html
+++ b/app/views/appellant-submission/v13/full/appeal-site/knows-none/identifying-landowners.html
@@ -55,8 +55,13 @@
         {% else %}
 
           <h1 class="govuk-heading-l">Identifying the landowners</h1>
-          <p class="govuk-body">You must have taken all reasonable steps to identify the landowners.</p>
-          <h2 class="govuk-heading-m">Have you taken all reasonable steps to identify the landowners?</h2>
+          <p class="govuk-body">You must have attempted to identify all the landowners.</p>
+          <p class="govuk-body">This includes:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>searching the land registry</li>
+            <li>putting up a site notice at the appeal site</li>
+          </ul>
+          <h2 class="govuk-heading-m">Confirm that you have attempted to identify the landowners</h2>
 
           {{ govukCheckboxes({
             idPrefix: "appealsub-"+version+"-appealsite-knownone-identifying",
